[gd_scene load_steps=2 format=2]

[ext_resource path="res://Common/MainScene_Script.gd" type="Script" id=1]

[node name="Base_MainNode" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBox1" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBox1_1" type="VBoxContainer" parent="HBox1"]
margin_right = 36.0
margin_bottom = 600.0

[node name="RollDice_Button" type="Button" parent="HBox1/VBox1_1"]
margin_right = 36.0
margin_bottom = 20.0
text = "Roll"

[node name="DiceRollResult" type="RichTextLabel" parent="HBox1/VBox1_1"]
margin_top = 24.0
margin_right = 36.0
margin_bottom = 24.0
text = "testi
"

[node name="VBox1_2" type="VBoxContainer" parent="HBox1"]
margin_left = 40.0
margin_right = 81.0
margin_bottom = 600.0

[node name="DiceMenu" type="PopupMenu" parent="HBox1/VBox1_2"]
margin_left = -40.0
margin_right = 984.0
margin_bottom = 600.0
mouse_default_cursor_shape = 2
custom_constants/vseparation = 10
items = [ "D4", null, 1, false, false, -1, 0, null, "", false, "D6", null, 1, false, false, -1, 0, null, "", false, "D8", null, 1, false, false, -1, 0, null, "", false, "D10", null, 1, false, false, -1, 0, null, "", false, "D12", null, 1, false, false, -1, 0, null, "", false, "D20", null, 1, false, false, -1, 0, null, "", false ]
hide_on_checkable_item_selection = false

[node name="ShowDice" type="Button" parent="HBox1/VBox1_2"]
margin_right = 41.0
margin_bottom = 20.0
text = "Dice"

[connection signal="pressed" from="HBox1/VBox1_1/RollDice_Button" to="." method="_on_RollDice_Button_pressed"]
[connection signal="id_pressed" from="HBox1/VBox1_2/DiceMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="HBox1/VBox1_2/ShowDice" to="." method="_on_ShowDice_pressed"]
